--- a/package.json
+++ b/package.json
@@ -9,23 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^1.24.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.3",
     "@splinetool/react-spline": "^4.1.0",
     "@splinetool/runtime": "^1.10.53",
     "@tailwindcss/typography": "^0.5.10",
     "auth": "^1.2.3",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.27.5",
+    "dommatrix": "^0.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.536.0",
+    "mammoth": "^1.11.0",
     "mongodb": "^5.9.2",
     "mongoose": "^8.17.0",
     "next": "15.4.2",
     "next-auth": "^4.24.11",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^2.2.13",
+    "pdf2json": "^3.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
@@ -35,11 +43,13 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.13",
+    "@types/pdf-parse": "^1.1.5",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.2",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "typescript": "5.9.3"
   },
   "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "index.js",
